--- a/suppliers.html
+++ b/suppliers.html
@@ -10,6 +10,14 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 	<link rel="stylesheet" href="./assets/css/style.css" type="text/css"/>
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	   <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
+    
+  <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function() {
+            emailjs.init("user_0lBHAUSVc18wA9j4fk6kg");
+        })();
+    </script>
 </head>
 
 <body>
@@ -23,12 +31,12 @@
 
 		<nav class="nav_bg">
 			<div class="nav-wrapper nav-bg">
-
-				<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+				<a href="index.html" class="brand-logo logo">Top Farm Wedding</a>
+				<a href="index.html" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
 				<ul class="right hide-on-med-and-down">
 					<li><a href="index.html" class="uppercase">Home</a></li>
 					<li><a href="suppliers.html" class="uppercase">Suppliers</a></li>
-					<li><a href="" class="uppercase">Contact</a></li>
+						<li><a class="uppercase modal-trigger " href="#modal1">Contact</a></li>
 
 				</ul>
 			</div>
@@ -37,15 +45,15 @@
 		<ul class="sidenav" id="mobile-demo">
 			<li><a href="index.html" class="uppercase">Home</a></li>
 			<li><a href="suppliers.html" class="uppercase">Suppliers</a></li>
-			<li><a href="" class="uppercase">Contact</a></li>
+				<li><a class="uppercase modal-trigger " href="#modal1">Contact</a></li>
 			
 		</ul>
 	</div>
 
 <!--................people...................-->
 	<div class="row">
-		<div class="col s8 offset-s2">
-			<img src="https://img.icons8.com/ios/100/000000/user.png">
+		<div class="col s12 l2 offset-l5   gap">
+			<img src="https://img.icons8.com/ios/100/000000/user.png" class="center-img">
 		</div>
 	</div>
 	<div class="row">
@@ -98,8 +106,8 @@
 <!--................marquee...................-->
 
 	<div class="row">
-		<div class="col s8 offset-s2">
-			<img src="https://img.icons8.com/ios/100/000000/circus-tent.png">
+			<div class="col s12 l2 offset-l5 ">
+			<img src="https://img.icons8.com/ios/100/000000/circus-tent.png" class="center-img">
 		</div>
 	</div>
 	<div class="row">
@@ -150,8 +158,8 @@
 <!--................Entertainment...................-->
 
 	<div class="row">
-		<div class="col s8 offset-s2">
-		<img src="https://img.icons8.com/ios/100/000000/theatre-mask.png">
+			<div class="col s12 l2 offset-l5 ">
+		<img src="https://img.icons8.com/ios/100/000000/theatre-mask.png" class="center-img">
 		</div>
 	</div>
 	<div class="row">
@@ -201,8 +209,8 @@
 <!--................food...................-->
 
 	<div class="row">
-		<div class="col s8 offset-s2">
-	<img src="https://img.icons8.com/ios/100/000000/food.png">
+		<div class="col s12 l2 offset-l5 ">
+	<img src="https://img.icons8.com/ios/100/000000/food.png" class="center-img">
 		</div>
 	</div>
 	<div class="row">
@@ -250,12 +258,81 @@
 	
 	</div>
 
+	<!--footer -->
+	<footer>
+		<div class="container">
+			<div class="row">
+				<div class="col s12">
+					<h5>If you would like <br>more information</h5>
+				</div>
+				<div class="col s12">
+					<button data-target="modal1" class="modal-trigger">Contact</button>
+				</div>
+				<div class="col s12">
+					<i class="fab fa-facebook fa-5x"></i>
+					<i class="fab fa-instagram fa-5x"></i>
+				</div>
+
+			</div>
+		</div>
+	</footer>
+	<!-- Modal -->
+	<div id="modal1" class="modal">
+		<div class="modal-content">
+			<h4 class="modal-header">Contact Us</h4>
+
+
+			<div class="row">
+				<form class="col s12 m12" onsubmit="return sendMail(this);">
+					<div class="row">
+						<div class="input-field col s12 m6">
+							<i class="material-icons prefix">account_circle</i>
+							<input id="fullname" name="name" type="text" class="validate">
+							<label for="icon_prefix">Name</label>
+						</div>
+						<div class="input-field col s12 m6">
+							<i class="material-icons prefix">phone</i>
+							<input id="icon_telephone" type="tel" class="validate">
+							<label for="icon_telephone">Telephone</label>
+						</div>
+
+						<div class="input-field col s12 m6">
+							<i class="material-icons prefix">email</i>
+							<input id="emailaddress" name="emailaddress" type="email" class="validate">
+							<label for="email">Email</label>
+						</div>
+
+						<div class="input-field col s12 m6">
+							<i class="material-icons prefix">mode_edit</i>
+							<textarea id="projectsummary" name="projectsummary" class="materialize-textarea"></textarea>
+							<label for="textarea1">Textarea</label>
+						</div>
+					</div>
+					<button type="submit">Submit<i class="material-icons right">send</i></button>
+				</form>
+			</div>
+
+
+		</div>
+		<div class="modal-footer">
+
+		</div>
+	</div>
 
 	<!--map js/materialise/jquery and js link -->
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-		<script type="text/javascript" src="./assets/js/javascript.js"></script>
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/js/jquery-ui.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script type="text/javascript" src="./assets/js/javascript.js"></script>
+	<script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDDHHyac2SiOYPNYxXMK7rqJjnB8nCaaxE&callback=initMap"></script>
+
+
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.min.js"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery.lazy/1.7.9/jquery.lazy.plugins.min.js"></script>
+	<script src="assets/js/maps.js"></script>
+	<script type="text/javascript" src="./assets/js/css3-animate-it.js"></script>
+	<script src="assets/js/sendEmail.js"></script>
 </body>
 
 </html>
